feat: add skills section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
             <li><a href="https://www.udemy.com/course/database-engines-crash-course">https://www.udemy.com/course/database-engines-crash-course</a></li>
         </ul>
     </section>
+    <section class="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>PHP</li>
+            <li>JavaScript</li>
+            <li>MySQL</li>
+            <li>HTML</li>
+            <li>CSS</li>
+        </ul>
+    </section>
     <section class="languages">
         <h2>Languages</h2>
         <ul>
