--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h2>Objective</h2>
         <p>Self-taught full-stack web developer aiming to master frontend.
             One year experience in building complex CRM with more than 250 tables in database.
-            Current job stack: PHP, Codeigniter, MySQL, jQuery, Bootstrap, Git.
-            Familiar with Laravel and React.</p>
+            Current job stack: PHP, Codeigniter, MySQL, jQuery, Bootstrap, Git.<br>
+            Familiar with Laravel and Vue.js</p>
     </section>
     <section class="code-example">
         <h2>Code Example</h2>
