--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>Self-taught full-stack web developer aiming to master frontend.
             One year experience in building complex CRM with more than 250 tables in database.
             Current job stack: PHP, Codeigniter, MySQL, jQuery, Bootstrap, Git.<br>
-            Familiar with Laravel and Vue.js</p>
+            Familiar with Laravel, Vue.js and React</p>
     </section>
     <section class="code-example">
         <h2>Code Example</h2>
@@ -38,7 +38,7 @@
     <section class="experience">
         <h2>Experience</h2>
         <div class="item">
-            <h3>Backend developer <span class="date">(Dec 2019 - Jan 2021)</span></h3>
+            <h3>Full-stack developer <span class="date">(Dec 2019 - Jan 2021)</span></h3>
             <p>Perfectum CRM</p>
             <ul>
                 <li>Development, support and modification of CRM. </li>
