--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
                 <li>API integration for eCommerce</li>
             </ul>
         </div>
+        <div class="item">
+            <h3>Full-stack developer <span class="date">(since Jan 2021)</span></h3>
+            <p>AcidBro</p>
+            <ul>
+                <li>Development, support and modification of in-house CRM. </li>
+                <li>Front-end redesign</li>
+                <li>API integrations</li>
+                <li>Telegram Bot development</li>
+            </ul>
+        </div>
     </section>
     <section class="education">
         <h2>Education</h2>
